got my npm package to work

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -2,8 +2,8 @@
 @import './includes/_index.scss';
 @import './includes/_app.scss';
 @import './includes/_button.scss';
-@import './includes/_datalistinput.scss';
 @import './includes/_navbar.scss';
 @import './includes/_preferences.scss';
 @import './includes/message.scss';
 @import './includes/_login.scss';
+@import './includes/_profile.scss';
