adding tags and more option for datalistinput

--- a/src/scss/includes/_navbar.scss
+++ b/src/scss/includes/_navbar.scss
@@ -44,6 +44,8 @@
         .icon-item {
             @extend .aria-element;
             height: 50px;
+            background-color: $light-black;
+            border: none;
             img {
                 padding: 10px 16px;
                 border-radius: 50%;
