basic functionality implemented, might need to refactor after we have chosen a backend architecture (e.g. datastructure)

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -6,4 +6,5 @@
 @import './includes/_preferences.scss';
 @import './includes/message.scss';
 @import './includes/_login.scss';
+@import './includes/_tags.scss';
 @import './includes/_profile.scss';
