--- a/src/scss/includes/_index.scss
+++ b/src/scss/includes/_index.scss
@@ -1,3 +1,7 @@
+* {
+  box-sizing: border-box;
+}
+
 body {
   background-color: white;
   margin: 0;
@@ -27,6 +31,16 @@ h1 {
   @media screen and (max-width: $phone-width) {
     margin: 15px 5px;
     font-size: $font-size-xl;
+  }
+}
+
+h2 {
+  color: $primary-color;
+  font-size: $font-size-m;
+  font-weight: $font-weight-medium;
+  margin: 20px;
+  @media screen and (max-width: $phone-width) {
+    margin: 15px 5px;
   }
 }
 
