--- a/src/scss/includes/_navbar.scss
+++ b/src/scss/includes/_navbar.scss
@@ -47,9 +47,10 @@
             background-color: $light-black;
             border: none;
             img {
-                padding: 10px 16px;
+                height: 100%;
+                padding: 14px 16px;
+                margin: 0;
                 border-radius: 50%;
-                width: 28px;
             }
         }
     }
