--- a/src/scss/includes/_profile.scss
+++ b/src/scss/includes/_profile.scss
@@ -1,42 +1,28 @@
-.datalist-input {
-    /*the container must be positioned relative:*/
-    position: relative;
-    display: inline-block;
+.profile-container {
     width: 100%;
     height: 100%;
-}
-.autocomplete-input {
-    border: 1px solid transparent;
-    background-color: #f1f1f1;
-    width: 100%;
-    height: 100%;
-}
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 
-.datalist-items {
-    position: absolute;
-    border: 1px solid #d4d4d4;
-    border-bottom: none;
-    border-top: none;
-    z-index: 99;
-    /*position the autocomplete items to be the same width as the container:*/
-    top: 100%;
-    left: 0;
-    right: 0;
-}
-.datalist-items div {
-    padding: 10px;
-    cursor: pointer;
-    background-color: #fff;
-    border-bottom: 1px solid #d4d4d4;
+    .dislikes-container {
+        @extend .box;
+        padding: 20px;
+        margin-top: 20px;
+        width: 80%;
+        max-width: 800px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
 
-    &:hover {
-        /*when hovering an item:*/
-        background-color: #e9e9e9;
+        h2 {
+            width: 100%;
+            text-align: left;
+        }
+
+        .input-container {
+            width: 400px;
+            max-width: 80%;
+        }        
     }
-}
-
-.datalist-active-item {
-    /*when navigating through the items using the arrow keys:*/
-    background-color: $hover-primary-color !important;
-    color: #ffffff;
 }
