--- a/src/scss/includes/_profile.scss
+++ b/src/scss/includes/_profile.scss
@@ -4,6 +4,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-bottom: 15%;
 
     .dislikes-container {
         @extend .box;
