--- a/src/scss/includes/_profile.scss
+++ b/src/scss/includes/_profile.scss
@@ -5,6 +5,9 @@
     flex-direction: column;
     align-items: center;
     margin-bottom: 15%;
+    @media screen and (max-width: $phone-width) {
+        margin-bottom: 25%;
+      }
 
     .dislikes-container {
         @extend .box;
@@ -22,6 +25,7 @@
         }
 
         .input-container {
+            margin-top: 25px;
             width: 400px;
             max-width: 80%;
         }        
