styling mobile view, selection index, updated npm package

--- a/src/scss/includes/_profile.scss
+++ b/src/scss/includes/_profile.scss
@@ -7,13 +7,17 @@
     margin-bottom: 15%;
     @media screen and (max-width: $phone-width) {
         margin-bottom: 25%;
-      }
+    }
 
     .dislikes-container {
         @extend .box;
         padding: 20px;
         margin-top: 20px;
         width: 80%;
+        @media screen and (max-width: $phone-width) {
+            padding: 10px;
+            width: 95%;
+        }
         max-width: 800px;
         display: flex;
         flex-direction: column;
@@ -28,6 +32,10 @@
             margin-top: 25px;
             width: 400px;
             max-width: 80%;
-        }        
+
+            @media screen and (max-width: $phone-width) {
+                max-width: 95%;
+            }
+        }
     }
 }
