implemented recipe selction and routing to cookingview (detail page of a recipe)

--- a/src/scss/includes/_home.scss
+++ b/src/scss/includes/_home.scss
@@ -1,29 +1,26 @@
-.profile-container {
+.home-container {
     @extend .page;
 
-    .dislikes-container {
-        @extend .box;
+    .recipes-container {
         padding: 20px;
         margin-top: 20px;
-        width: 80%;
-        max-width: 800px;
+        width: 600px;
+
         display: flex;
         flex-direction: column;
         align-items: center;
 
         h2 {
             width: 100%;
-            text-align: left;
+            text-align: center;
         }
 
         .input-container {
-            margin-top: 25px;
-            width: 400px;
-            max-width: 80%;
-
+            width: 100%;
+            margin-top: 10px;
             input {
                 margin-bottom: 0;
             }
-        }        
+        }   
     }
 }
