--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -7,4 +7,5 @@
 @import './includes/message.scss';
 @import './includes/_login.scss';
 @import './includes/_tags.scss';
+@import './includes/_home.scss';
 @import './includes/_profile.scss';
