--- a/src/scss/includes/_app.scss
+++ b/src/scss/includes/_app.scss
@@ -41,6 +41,18 @@
     box-shadow: $box-shadow-base;
 }
 
+.page {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 15%;
+    @media screen and (max-width: $phone-width) {
+        margin-bottom: 25%;
+      }
+}
+
 .not-displayed {
    display: none !important;
 }
