fixed mobile view of home page

--- a/src/scss/includes/_home.scss
+++ b/src/scss/includes/_home.scss
@@ -5,6 +5,9 @@
         padding: 20px;
         margin-top: 20px;
         width: 600px;
+        @media screen and (max-width: $phone-width) {
+            width: 100%;
+        }
 
         display: flex;
         flex-direction: column;
@@ -13,6 +16,9 @@
         h2 {
             width: 100%;
             text-align: center;
+            @media screen and (max-width: $phone-width) {
+                text-align: left;
+            }
         }
 
         .input-container {
