--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -9,3 +9,4 @@
 @import './includes/_tags.scss';
 @import './includes/_home.scss';
 @import './includes/_profile.scss';
+@import './includes/_admin.scss';
