--- a/src/scss/includes/_login.scss
+++ b/src/scss/includes/_login.scss
@@ -1,9 +1,5 @@
 .login-container {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    @extend .page;
 }
 
 .login-form {
