--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -10,3 +10,4 @@
 @import './includes/_home.scss';
 @import './includes/_profile.scss';
 @import './includes/_admin.scss';
+@import './includes/password.scss';
