implemented logic to map user recipes to recipes for recipe component, implemented recipe and user recipe api functions

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -10,4 +10,4 @@
 @import './includes/_home.scss';
 @import './includes/_profile.scss';
 @import './includes/_admin.scss';
-@import './includes/password.scss';
+@import './includes/_password.scss';
