--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -11,3 +11,4 @@
 @import './includes/_profile.scss';
 @import './includes/_admin.scss';
 @import './includes/_password.scss';
+@import './includes/_cooking.scss';
