--- a/src/scss/includes/_cooking.scss
+++ b/src/scss/includes/_cooking.scss
@@ -1,7 +1,30 @@
 .cooking-page {
     @extend .page;
 
-    .substitute {
-        @extend .box;
-    }
+    .substitutes-container {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        .substitute {
+            @extend .box;
+            width: 80%;
+            font-size: $font-size-xs;
+            font-weight: $font-weight-light;
+            text-align: center;
+            margin: 0 auto 10px;
+            padding: 15px 20px;
+            background-color: $success-color;
+        
+            div {
+                float: right;
+        
+                img {
+                    padding-left: 20px;
+                    height: 15px;
+                }
+            }
+        }
+    }  
+    
 }
