first draft of the detail view

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -12,3 +12,4 @@
 @import './includes/_admin.scss';
 @import './includes/_password.scss';
 @import './includes/_cooking.scss';
+@import './includes/_recipe.scss';
