--- a/src/scss/includes/_cooking.scss
+++ b/src/scss/includes/_cooking.scss
@@ -6,6 +6,7 @@
         display: flex;
         flex-direction: column;
         align-items: center;
+
         .substitute {
             @extend .box;
             width: 80%;
@@ -15,12 +16,24 @@
             margin: 0 auto 10px;
             padding: 15px 20px;
             background-color: $success-color;
-        
-            div {
-                float: right;
-        
+
+            display: flex;
+            flex-direction: row;
+
+            .substitute-btn {
+                display: flex;
+                flex-direction: column;
+                flex-grow: 1;
+                align-items: left;
+                text-align: left;
+                line-height: $font-size-xs + 8px;
+                margin: 10px 10px;
+            }
+            
+            .substitute-cancel-btn {
                 img {
                     padding-left: 20px;
+                    padding-right: 20px;
                     height: 15px;
                 }
             }
