--- a/src/scss/includes/_message.scss
+++ b/src/scss/includes/_message.scss
@@ -1,13 +1,21 @@
 .message-box {
     @extend .box;
+    display: flex;
     font-size: $font-size-xs;
     font-weight: $font-weight-light;
     text-align: center;
     margin: 0 auto 10px;
     padding: 15px 20px;
+    @media screen and (max-width: $phone-width) {
+        width: 95%;
+    }
+
+    span {
+        flex-grow: 1;
+    }
 
     div {
-        float: right;
+        
 
         img {
             padding-left: 20px;
