--- a/src/scss/includes/_preferences.scss
+++ b/src/scss/includes/_preferences.scss
@@ -12,8 +12,7 @@
     margin-top: 3px;
     margin-right: 16px;
     padding: 0;
-    background-color: $light-black;
-    border-top: 1px solid $black;
+    background-color: $primary-color;
     font-size: $font-size-xs;
 
     .title {
@@ -21,7 +20,7 @@
         color: $white;
         text-align: left;
         padding: 8px 14px 8px 14px;
-        border-bottom: 1px solid $black;
+        border-bottom: 1px solid $white;
 
         img {
             padding-right: 10px;
@@ -41,14 +40,14 @@
     
             /* Change the link color to #111 (black) on hover */
             &:hover {
-                background-color: $black;
+                background-color: $hover-primary-color;
             }
 
             &.current { 
                 pointer-events: none;
                 cursor: default;
                 text-decoration: none;
-                background-color: $grey-base;
+                background-color: $white;
                 color: $black;
             }
 
