Added nutrition facts

--- a/src/scss/includes/_recipe.scss
+++ b/src/scss/includes/_recipe.scss
@@ -18,6 +18,13 @@
       #servings{
         width: 50px;
       }
+
+      .borderTable {
+        border-collapse: collapse;
+      table, th, td {
+        border: 1px solid black;
+      }
+    }
     
   }
 
