--- a/src/scss/includes/_recipe.scss
+++ b/src/scss/includes/_recipe.scss
@@ -23,6 +23,7 @@
         border-collapse: collapse;
       table, th, td {
         border: 1px solid black;
+        padding: 5px;
       }
     }
     
