--- a/src/scss/includes/_modal.scss
+++ b/src/scss/includes/_modal.scss
@@ -18,7 +18,11 @@
         }
 
         .close-button {
-            padding: 10px;
+            margin-right: 10px;
+            margin-top: 10px;
+            img {
+                width: 20px;
+            }
         }
     }
 }
