--- a/src/scss/includes/_cooking.scss
+++ b/src/scss/includes/_cooking.scss
@@ -30,6 +30,9 @@
                 .name-score {
                     display: flex;
                     flex-direction: row;
+                    @media screen and (max-width: $phone-width) {
+                        flex-direction: column;
+                    }
                     font-weight: $font-weight-medium;
 
                     .name {
