--- a/src/scss/includes/_variables.scss
+++ b/src/scss/includes/_variables.scss
@@ -11,7 +11,7 @@ $light-red: #ffdce0;
 /* inspired by ant design: https://ant.design/docs/react/introduce */
 $primary-color: #fa541c; // primary color for all components
 $secondary-color: #ffbb96;
-$hover-primary-color: #ff7a45; 
+$hover-primary-color: #ff7a45;
 $link-color: #1890ff; // link color
 $success-color: #52c41a; // success state color
 $warning-color: #faad14; // warning state color
@@ -41,9 +41,10 @@ $error-font-color: $white;
 $success-font-color: $font-color;
 $warning-font-color: $font-color;
 $info-font-color: $font-color;
-$font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'PingFang SC', 'Hiragino Sans GB',
-  'Microsoft YaHei', 'Helvetica Neue', Helvetica, Arial, sans-serif, 'Apple Color Emoji',
-  'Segoe UI Emoji', 'Segoe UI Symbol';
+// $font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'PingFang SC', 'Hiragino Sans GB',
+//   'Microsoft YaHei', 'Helvetica Neue', Helvetica, Arial, sans-serif, 'Apple Color Emoji',
+//   'Segoe UI Emoji', 'Segoe UI Symbol';
+$font-family: Rubik,Lato,"Lucida Grande","Lucida Sans Unicode",Tahoma,Sans-Serif;
 
 $font-size-xs: 13px;
 $font-size-s: 16px;
@@ -56,6 +57,7 @@ $font-weight-light: 300;
 $font-weight-normal: 400;
 $font-weight-medium: 500;
 $font-weight-semi-bold: 600;
+$font-weight-bold: 700;
 $font-weight-heavy: 900;
 
 $navbar-height: 64px;
