--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -15,3 +15,4 @@
 @import './includes/_password.scss';
 @import './includes/_cooking.scss';
 @import './includes/_recipe.scss';
+@import './includes/_about.scss';
