--- a/src/scss/includes/_navbar.scss
+++ b/src/scss/includes/_navbar.scss
@@ -21,12 +21,12 @@
             color: $white;
             text-align: center;
             text-decoration: none;
-    
+
             /* Change the link color to black on hover */
             &:hover {
                 background-color: $hover-primary-color;
             }
-    
+
             &.current-page {
                 pointer-events: none;
                 cursor: default;
@@ -35,8 +35,11 @@
                 color: $primary-color;
             }
 
-            .text-item {                                    
+            .text-item {
                 padding: 14px 16px;
+                @media screen and (max-width: $phone-width) {
+                    padding: 14px 10px;
+                }
                 margin: 0;
             }
         }
@@ -49,6 +52,9 @@
             img {
                 height: 100%;
                 padding: 14px 16px;
+                @media screen and (max-width: $phone-width) {
+                    padding: 14px 10px;
+                }
                 margin: 0;
                 border-radius: 50%;
             }
