--- a/src/scss/includes/_about.scss
+++ b/src/scss/includes/_about.scss
@@ -1,12 +1,19 @@
 .about {
     width: 100%;
-    overflow: hidden;
     text-align: center;
+    scroll-snap-type: y mandatory;
+    overflow: scroll;
+    height: 100vh;
+    scroll-snap-type: mandatory;
+    scroll-snap-points-y: repeat(100vh);
+    scroll-snap-type: y mandatory;
+    scroll-behavior: smooth;
 
     .one-pager {
         position: relative;
         height: 100vh;
         width: 100%;
+        scroll-snap-align: start;
     }
 
     .centered-absolute-child {
