--- a/src/scss/includes/_about.scss
+++ b/src/scss/includes/_about.scss
@@ -22,6 +22,11 @@
         margin: auto;
     }
 
+    .opactiy-box {
+        background-color: $light-black;
+        opacity: 0.7;
+    }
+
     &-arrow-down {
         position: absolute;
         @extend .centered-absolute-child;
@@ -47,8 +52,7 @@
             position: absolute;
             top: 25%;
             @extend .centered-absolute-child;
-            background-color: $light-black;
-            opacity: 0.7;
+            @extend .opactiy-box;
             width: 50%;
             @media screen and (max-width: $phone-width) {
                 width: 90%;
@@ -87,24 +91,50 @@
 
         &-title-box {
             position: absolute;
-            top: 25%;
-            @extend .centered-absolute-child;
-            background-color: $light-black;
-            opacity: 0.7;
-            width: 50%;
-            @media screen and (max-width: $phone-width) {
-                width: 90%;
-            }
+            top: 10%;
+            left: 5%;
+            width: 95%;
+            text-align: left;
 
             &-title {
                 margin: auto;
-                z-index: 1;
-                opacity: 1;
-                font-size: 120px;
+                font-size: 100px;
                 filter: brightness(1.8);
                 @media screen and (max-width: $phone-width) {
-                    font-size: 60px;
+                    font-size: 50px;
                 }
+            }
+        }
+
+        &-description-box {
+            position: absolute;
+            top: 30%;
+            @extend .centered-absolute-child;
+
+            &-description {
+                margin: auto;
+                font-size: 80px;
+                font-weight: $font-weight-bold;
+                filter: brightness(1.8);
+                @media screen and (max-width: $phone-width) {
+                    font-size: 45px;
+                }
+            }
+        }
+
+        &-info-box {
+            position: absolute;
+            top: 70%;
+            width: 80%;
+            @extend .centered-absolute-child;
+            font-size: $font-size-xl;
+            @media screen and (max-width: $phone-width) {
+                font-size: $font-size-m;
+            }
+
+            span {
+                padding: 5px;
+                display: block;
             }
         }
     }
