--- a/src/scss/includes/_about.scss
+++ b/src/scss/includes/_about.scss
@@ -31,6 +31,9 @@
         position: absolute;
         @extend .centered-absolute-child;
         bottom: 5%;
+        @media screen and (max-width: $phone-width) {
+            bottom: 8%;
+        }
 
         img {
             width: 50px;
@@ -149,54 +152,81 @@
         ul {
             text-align: left;
             @media screen and (max-width: $pad-width) {
-                font-size: $font-size-xs;
+                font-size: $font-size-m;
                 background-color: $light-black;
-                opacity: 0.7;
+                opacity: 0.8;
+                filter: brightness(1.8);
                 color: $white;
             }
 
             li {
                 padding-top: 5px;
+            }
+        }
+
+        &-box {
+            @extend .centered-absolute-child;
+            @media screen and (min-width: $pad-width) {
+                display: flex;
+                flex-direction: row;
+                justify-content: flex-end;
+            }
+            img {
+                margin-left: 10px;
+                width: 80px;
+                margin-right: 40px;
                 @media screen and (max-width: $phone-width) {
-                    padding-top: 2px;
+                    display: none;
                 }
             }
         }
 
         &-profile-box {
+            @extend .about-page-3-box;
             position: absolute;
             top: 20%;
-            @extend .centered-absolute-child;
-            width: 60%;
-            display: flex;
-            flex-direction: row;
-            justify-content: flex-end;
-            img {
-                margin-left: 10px;
-                width: 80px;
-                margin-right: 40px;
-                @media screen and (max-width: $phone-width) {
-                    display: none;
-                }
+            width: 95%;
+            @media screen and (min-width: $pad-width) {
+                width: 60%;
             }
         }
 
         &-cooking-box {
+            @extend .about-page-3-box;
             position: absolute;
-            top: 60%;
-            @extend .centered-absolute-child;
-            width: 90%;
-            display: flex;
-            flex-direction: row;
-            justify-content: flex-end;
-            img {
-                margin-left: 10px;
-                width: 80px;
-                margin-right: 40px;
-                @media screen and (max-width: $phone-width) {
-                    display: none;
-                }
+            top: 50%;
+            width: 95%;
+            @media screen and (min-width: $pad-width) {
+                width: 90%;
+                top: 60%;
             }
         }
+    }
+
+    &-page-4 {
+        @extend .one-pager;
+
+        h3 {
+            position: absolute;
+            top: 15%;
+            @extend .centered-absolute-child;
+        }
+
+        &-recipes-container {
+            @extend .centered-absolute-child;
+            position: absolute;
+            top: 40%;
+            width: 50%;
+            @media screen and (max-width: $phone-width) {
+                width: 90%;
+            }
+            @extend .box;
+            &-input {
+                padding: 20px;
+                text-align: left;
+            }
+        }
+
+
     }
 }
