--- a/src/scss/includes/_about.scss
+++ b/src/scss/includes/_about.scss
@@ -4,17 +4,21 @@
     scroll-snap-type: y mandatory;
     overflow: scroll;
     height: 100vh;
+    min-height: 12 * $navbar-height;
     scroll-snap-type: mandatory;
     scroll-snap-points-y: repeat(100vh);
     scroll-snap-type: y mandatory;
     scroll-behavior: smooth;
     -webkit-overflow-scrolling: touch;
 
+
     .one-pager {
         position: relative;
         height: 100vh;
+        min-height: 12 * $navbar-height;
         width: 100%;
         scroll-snap-align: start;
+
     }
 
     .centered-absolute-child {
