--- a/src/scss/includes/_cooking.scss
+++ b/src/scss/includes/_cooking.scss
@@ -5,12 +5,12 @@
         width: 100%;
     }
 
-    .substitutes-container {
+    .ingredients-container {
         display: flex;
         flex-direction: column;
         align-items: center;
 
-        .substitute {
+        .ingredient {
             @extend .box;
             width: 80%;
             font-size: $font-size-xs;
@@ -22,7 +22,7 @@
             display: flex;
             flex-direction: row;
 
-            .substitute-btn {
+            &-content {
                 display: flex;
                 flex-direction: column;
                 flex-grow: 1;
@@ -49,7 +49,7 @@
                 }
             }
 
-            .substitute-cancel-btn {
+            &-x-btn {
                 img {
                     padding-left: 20px;
                     padding-right: 20px;
@@ -59,4 +59,17 @@
         }
     }
 
+    .edit-ingredients-container {
+        width: 60%;
+
+        .ingredient {
+            border: none;
+            box-shadow: none;
+            padding-top: 5px;
+            padding-bottom: 5px;
+            margin-top: 0;
+            margin-bottom: 0;
+        }
+
+    }
 }
