--- a/src/scss/includes/_modal.scss
+++ b/src/scss/includes/_modal.scss
@@ -6,6 +6,8 @@
     margin: auto;
     width: 50%;
     min-height: 50%;
+    max-height: 70vh;
+    overflow-y: scroll;
 
     @media screen and (max-width: $phone-width) {
         width: 95%;
