--- a/src/scss/includes/_cooking.scss
+++ b/src/scss/includes/_cooking.scss
@@ -9,6 +9,7 @@
         display: flex;
         flex-direction: column;
         align-items: center;
+        padding-bottom: 20px;
 
         .ingredient {
             @extend .box;
@@ -60,16 +61,44 @@
     }
 
     .edit-ingredients-container {
+        @extend .ingredients-container;
         width: 60%;
 
-        .ingredient {
-            border: none;
-            box-shadow: none;
-            padding-top: 5px;
-            padding-bottom: 5px;
-            margin-top: 0;
-            margin-bottom: 0;
-        }
+        &-form {
+            display: flex;
+            align-items: center;
+            padding-bottom: 20px;
+            width: 100%;
+            @media screen and (max-width: $phone-width) {
+                display: flex;
+                flex-direction: column;
+                align-content: center;
+            }
 
+            &-amount {
+                display: inline-flex;
+
+                input {
+                    text-align: right;
+                    margin: auto;
+                    padding-right: 5px;
+                    width: 40px;
+                }
+
+                span {
+                    padding-right: 10px;
+                    margin: auto;
+                }
+            }
+
+            .datalist-input-input {
+                max-width: 250px;
+                margin-bottom: 0px;
+            }
+
+            button {
+                margin-left: 20px;
+            }
+        }
     }
 }
