--- a/src/scss/includes/_recipe.scss
+++ b/src/scss/includes/_recipe.scss
@@ -18,7 +18,7 @@
         font-size: $font-size-xs;
     }
 
-    .recipe-preparation-time {
+    &-preparation-time {
         display: inline;
         img {
             width: 20px;
@@ -32,7 +32,7 @@
             box-shadow: 0 2px 0 rgba(0,0,0,0.045);
     }
 
-    &-tables-container {
+    &-tables {
         width: 100%;
         display: flex;
         flex-direction: row;
@@ -50,37 +50,43 @@
             margin: 20px 5px;
         }
 
-        .ingredients-container {
-            @extend .box;
+        &-ingredients {
             padding: 5px;
             min-width: 45%;
 
-            .header-container {
+            &-header {
                 display: inline-flex;
                 width: 100%;
+                padding: 10px;
 
-                .edit-ingredients-button {
+                h2 {
+                    flex-grow: 1;
+                }
+
+                &-button {
                     margin: auto 5px;
                 }
             }
 
-            .ingredients-table {
+            &-table {
                 display: grid;
-                grid-template-columns: auto auto auto auto;
-                row-gap: 10px;
-                column-gap: 2px;
+                grid-template-columns: max-content max-content max-content auto;
+                row-gap: 8px;
+                column-gap: 5px;
+                align-items: center;
                 word-wrap: break-word;
 
                 &-amount {
                     text-align: right;
                 }
 
-                div {
-                    margin-left: 20px;
-                    @media screen and (max-width: $phone-width) {
-                        margin-left: auto;
-                    }
+                &-label {
+                    padding-left: 5px;
+                }
 
+                div {
+                    padding-right: 5px;
+                    justify-self: self-end;
                 }
             }
         }
