--- a/src/scss/includes/_cooking.scss
+++ b/src/scss/includes/_cooking.scss
@@ -20,6 +20,13 @@
             margin: 0 auto 10px;
             padding: 15px 20px;
 
+            @media screen and (max-width: $phone-width) {
+                width: 95%;
+                border: none;
+                box-shadow: none;
+                padding: 0;
+            }
+
             display: flex;
             flex-direction: row;
 
@@ -31,6 +38,9 @@
                 text-align: left;
                 line-height: $font-size-xs + 8px;
                 padding: 10px 10px;
+                @media screen and (max-width: $phone-width) {
+                    padding: 5px 5px;
+                }
 
                 .name-score {
                     display: flex;
@@ -42,6 +52,7 @@
 
                     .name {
                         flex-grow: 1;
+                        font-weight: $font-weight-semi-bold;
                     }
 
                     .nutriscore {
@@ -63,17 +74,15 @@
     .edit-ingredients-container {
         @extend .ingredients-container;
         width: 60%;
+        @media screen and (max-width: $phone-width) {
+            width: 95%;
+        }
 
         &-form {
             display: flex;
             align-items: center;
             padding-bottom: 20px;
             width: 100%;
-            @media screen and (max-width: $phone-width) {
-                display: flex;
-                flex-direction: column;
-                align-content: center;
-            }
 
             &-amount {
                 display: inline-flex;
@@ -83,21 +92,37 @@
                     margin: auto;
                     padding-right: 5px;
                     width: 40px;
+                    @media screen and (max-width: $phone-width) {
+                        font-size: $font-size-xs;
+                    }
                 }
 
                 span {
                     padding-right: 10px;
+                    @media screen and (max-width: $phone-width) {
+                        font-size: $font-size-xs;
+                        padding-right: 8px;
+                    }
+
                     margin: auto;
                 }
             }
 
             .datalist-input-input {
-                max-width: 250px;
+                width: 250px;
                 margin-bottom: 0px;
+                font-size: $font-size-s;
+                @media screen and (max-width: $phone-width) {
+                    font-size: $font-size-xs;
+                    width: 100px;
+                }
             }
 
             button {
                 margin-left: 20px;
+                @media screen and (max-width: $phone-width) {
+                    margin-left: 8px;
+                }
             }
         }
     }
