--- a/src/scss/includes/_recipe.scss
+++ b/src/scss/includes/_recipe.scss
@@ -1,7 +1,7 @@
 
   .recipe {
       @extend .box;
-      width: 80%;
+      width: 90%;
       padding: 10px;
       padding-bottom: 40px;
       @media screen and (max-width: $phone-width) {
@@ -32,11 +32,33 @@
             box-shadow: 0 2px 0 rgba(0,0,0,0.045);
     }
 
-    &-tables {
+    .large-content {
+        flex-direction: column;
+        align-items: center;
+        @media screen and (max-width: $phone-width) {
+           display: none;
+        }
+
+    }
+
+    .content-box {
+        @extend .box;
+        padding: 30px;
+        margin: 30px;
+        @media screen and (max-width: $phone-width) {
+            width: 100%;
+            padding: 0;
+            margin: 0;
+            box-shadow: none;
+            border: none;
+        }
+    }
+
+    &-content {
         width: 100%;
         display: flex;
         flex-direction: row;
-        justify-content: space-between;
+        justify-content: space-around;
         padding: 10px 5%;
         @media screen and (max-width: $pad-width) {
             flex-direction: column;
@@ -44,6 +66,7 @@
         }
         @media screen and (max-width: $phone-width) {
             font-size: $font-size-xs;
+            font-weight: $font-weight-light;
         }
 
         h2 {
@@ -51,13 +74,10 @@
         }
 
         &-ingredients {
-            padding: 5px;
-            min-width: 45%;
-
+            @extend .content-box;
             &-header {
                 display: inline-flex;
                 width: 100%;
-                padding: 10px;
 
                 h2 {
                     flex-grow: 1;
@@ -71,6 +91,9 @@
             &-table {
                 display: grid;
                 grid-template-columns: max-content max-content max-content auto;
+                @media screen and (max-width: $phone-width) {
+                    grid-template-columns: max-content max-content auto auto;
+                }
                 row-gap: 8px;
                 column-gap: 5px;
                 align-items: center;
@@ -87,6 +110,24 @@
                 div {
                     padding-right: 5px;
                     justify-self: self-end;
+                }
+            }
+        }
+
+        &-pie {
+            @extend .content-box;
+            .recharts-wrapper {
+                width: 300px !important;
+                height: 300px !important;
+                @media screen and (max-width: $phone-width) {
+                    width: 200px !important;
+                    height: 200px !important;
+                }
+                .recharts-legend-wrapper {
+                    width: 290px !important;
+                    @media screen and (max-width: $phone-width) {
+                        width: 190px !important;
+                    }
                 }
             }
         }
