--- a/src/scss/includes/_recipe.scss
+++ b/src/scss/includes/_recipe.scss
@@ -32,15 +32,6 @@
             box-shadow: 0 2px 0 rgba(0,0,0,0.045);
     }
 
-    .large-content {
-        flex-direction: column;
-        align-items: center;
-        @media screen and (max-width: $phone-width) {
-           display: none;
-        }
-
-    }
-
     .content-box {
         @extend .box;
         padding: 30px;
@@ -52,6 +43,11 @@
             box-shadow: none;
             border: none;
         }
+    }
+
+    .large-content {
+        flex-direction: column;
+        align-items: left;
     }
 
     &-content {
@@ -116,29 +112,24 @@
 
         &-pie {
             @extend .content-box;
-            .recharts-wrapper {
-                width: 300px !important;
-                height: 300px !important;
-                @media screen and (max-width: $phone-width) {
-                    width: 200px !important;
-                    height: 200px !important;
-                }
-                .recharts-legend-wrapper {
-                    width: 290px !important;
-                    @media screen and (max-width: $phone-width) {
-                        width: 190px !important;
-                    }
-                }
-            }
+        }
+
+        &-bar {
+            @extend .content-box;
         }
 
         .nutrition-table {
+            @extend .content-box;
             margin: 10px;
             table, th, td {
                 border-collapse: collapse;
                 border: 1px solid black;
                 padding: 5px;
             }
+
+            @media screen and (max-width: $phone-width) {
+                display: none;
+             }
           }
     }
 }
