--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -9,6 +9,7 @@
 @import './includes/_login.scss';
 @import './includes/_tags.scss';
 @import './includes/_datalist-input.scss';
+@import './includes/_boxgrid.scss';
 @import './includes/_home.scss';
 @import './includes/_profile.scss';
 @import './includes/_admin.scss';
