--- a/src/scss/includes/_app.scss
+++ b/src/scss/includes/_app.scss
@@ -28,6 +28,11 @@
     box-shadow: $box-shadow-base;
 }
 
+.opactiy-box {
+    background-color: $light-black;
+    opacity: 0.7;
+}
+
 .page {
     width: 100%;
     height: 100%;
