--- a/src/scss/includes/_app.scss
+++ b/src/scss/includes/_app.scss
@@ -33,6 +33,12 @@
     opacity: 0.7;
 }
 
+.centered-absolute-child {
+    left: 0;
+    right: 0;
+    margin: auto;
+}
+
 .page {
     width: 100%;
     height: 100%;
